--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="inner">
 								<h1>晨南戴科dbkaoshi（时间轮转屋）官方博客</h1>
 								<p>修改文件的创建时间和修改时间，支持所有类型文件<br />
-								最新官方网址：<a href="www.dbkaoshi.com">www.dbkaoshi.com</a></p>
+								最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">http://www.dbkaoshi.com</a></p>
 							</div>
 						</div>
 						<nav>
@@ -45,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">简介</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>本博客是<a href="www.dbkaoshi.com" target="_blank">晨南戴科（时间轮转屋）网站</a>的唯一官方博客。</p>
+								<p>本博客是<a href="http://www.dbkaoshi.com" target="_blank">晨南戴科（时间轮转屋）网站</a>的唯一官方博客。</p>
 								<p>在晨南戴科网站，可以修改各类文件的创建时间、修改时间。</p>
 								<p>请大家收藏关注本博客网址。如果有任何重要消息，会在这里发布。</p>
 
@@ -54,7 +54,7 @@
 								<h2 class="major">文章</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>晨南戴科网站，支持修改各类文件的创建时间、修改时间。</p>
-								<p>晨南戴科最新官方网址：www.dbkaoshi.com</p>
+								<p>晨南戴科最新官方网址：http://www.dbkaoshi.com</p>
 								
 							</article>
 
@@ -62,7 +62,7 @@
 							<article id="about">
 								<h2 class="major">重要通知</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>晨南戴科（时间轮转屋）官方网址：www.dbkaoshi.com</p>
+								<p>晨南戴科（时间轮转屋）官方网址：http://www.dbkaoshi.com</p>
 							</article>
 
 						<!-- Contact -->
