--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>晨南戴科dbkaoshi官方博客——文件时间修改</title>
-		<meta name="description" content="晨南戴科dbkaoshi（时间轮转屋）可以修改所有文件的创建时间、修改时间，包括且不限于：word文档、pdf、wps、excel表格、ppt、cad、音视频、图片照片等各种文件。">
+		<meta name="description" content="晨南戴科dbkaoshi（时间轮转屋）修改所有文件的创建时间、修改时间，包括且不限于：word文档、pdf、wps、excel表格、ppt、cad、音视频、图片照片等各种文件。">
         <meta name="keywords" content="晨南戴科dbkaoshi,时间轮转屋,如何修改文件创建时间,文件修改日期怎么改">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
