--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="inner">
 								<h1>晨南戴科dbkaoshi（时间轮转屋）官方博客</h1>
 								<p>修改文件的创建时间和修改时间，支持所有类型文件<br />
-								最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">http://www.dbkaoshi.com</a></p>
+								晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">http://www.dbkaoshi.com</a></p>
 							</div>
 						</div>
 						<nav>
@@ -72,36 +72,6 @@
 	
 							</article>
 							
-<!-- 							<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article> -->
 
 						<!-- Elements -->
 							<article id="elements">
