--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 								<li><a href="#work">文章</a></li>
 								<li><a href="#about">重要通知</a></li>
 								<li><a href="#contact">联系方式</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -319,7 +318,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2022 <a href="www.dbkaoshi.com">晨南戴科dbkaoshi（时间轮转屋）</a>.</p>
+						<p class="copyright">&copy; 2022 <a href="www.dbkaoshi.com">晨南戴科dbkaoshi（时间轮转屋）</a></p>
 					</footer>
 
 			</div>
