--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 								<p>本博客是<a href="http://www.dbkaoshi.com" target="_blank">晨南戴科（时间轮转屋）网站</a>的唯一官方博客。</p>
 								<p>在晨南戴科网站，可以修改各类文件的创建时间、修改时间。</p>
 								<p>请大家收藏关注本博客网址。如果有任何重要消息，会在这里发布。</p>
+							</article>
 
 						<!-- Work -->
 							<article id="work">
