--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="inner">
 								<h1>晨南戴科dbkaoshi（时间轮转屋）官方博客</h1>
 								<p>修改文件的创建时间和修改时间，支持所有类型文件<br />
-								晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">http://www.dbkaoshi.com</a></p>
+								晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
 							</div>
 						</div>
 						<nav>
@@ -54,7 +54,7 @@
 								<h2 class="major">文章</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>晨南戴科网站，支持修改各类文件的创建时间、修改时间。</p>
-								<p>晨南戴科最新官方网址：http://www.dbkaoshi.com</p>
+								<p>晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
 								
 							</article>
 
@@ -62,7 +62,7 @@
 							<article id="about">
 								<h2 class="major">重要通知</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>晨南戴科（时间轮转屋）官方网址：http://www.dbkaoshi.com</p>
+								<p>晨南戴科（时间轮转屋）官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
 							</article>
 
 						<!-- Contact -->
@@ -320,7 +320,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2022 <a href="www.dbkaoshi.com">晨南戴科dbkaoshi（时间轮转屋）</a></p>
+						<p class="copyright">&copy; 2022 <a href="http://www.dbkaoshi.com">晨南戴科dbkaoshi（时间轮转屋）</a></p>
 					</footer>
 
 			</div>
