--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 							<article id="contact">
 								<h2 class="major">联系方式</h2>
 								<p>收藏本博客网址即可，及时关注发布的重要信息。</p>
+								<p>邮箱phillip_chen@foxmail.com，有问题可联系。</p>
 	
 							</article>
 							
