--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>晨南戴科dbkaoshi官方博客——文件时间修改</title>
+		<title>晨南戴科dbkaoshi</title>
 		<meta name="description" content="晨南戴科dbkaoshi（时间轮转屋）修改所有文件的创建时间、修改时间，包括且不限于：word文档、pdf、wps、excel表格、ppt、cad、音视频、图片照片等各种文件。">
         <meta name="keywords" content="晨南戴科dbkaoshi,时间轮转屋,如何修改文件创建时间,文件修改日期怎么改">
 		<meta charset="utf-8" />
@@ -22,7 +22,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>晨南戴科dbkaoshi（时间轮转屋）官方博客</h1>
+								<h1>晨南戴科dbkaoshi</h1>
 								<p>修改文件的创建时间和修改时间，支持所有类型文件<br />
 								晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
 							</div>
