--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>晨南戴科dbkaoshi</h1>
-								<p>修改文件的创建时间和修改时间，支持所有类型文件<br />
-								晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
+								<p><br />
+								</a></p>
 							</div>
 						</div>
 						<nav>
@@ -77,7 +77,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2022 <a href="http://www.dbkaoshi.com">晨南戴科dbkaoshi（时间轮转屋）</a></p>
+						<p class="copyright">&copy; 2022 <a href="http://www.dbkaoshi.com">晨南戴科dbkaoshi</a></p>
 					</footer>
 
 			</div>
