--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 
 <html>
 	<head>
-		<title>晨南戴科dbkaoshi</title>
-		<meta name="description" content="晨南戴科dbkaoshi（时间轮转屋）修改所有文件的创建时间、修改时间，包括且不限于：word文档、pdf、wps、excel表格、ppt、cad、音视频、图片照片等各种文件。">
-        <meta name="keywords" content="晨南戴科dbkaoshi,时间轮转屋,如何修改文件创建时间,文件修改日期怎么改">
+		<title>晨科迪比</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +20,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>晨南戴科dbkaoshi</h1>
+								<h1>晨科迪比</h1>
 								<p><br />
 								</a></p>
 							</div>
@@ -37,47 +35,11 @@
 						</nav>
 					</header>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">简介</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>本博客是<a href="http://www.dbkaoshi.com" target="_blank">晨南戴科（时间轮转屋）网站</a>的唯一官方博客。</p>
-								<p>在晨南戴科网站，可以修改各类文件的创建时间、修改时间。</p>
-								<p>请大家收藏关注本博客网址。如果有任何重要消息，会在这里发布。</p>
-							</article>
-
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">文章</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>晨南戴科网站，支持修改各类文件的创建时间、修改时间。</p>
-								<p>晨南戴科最新官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
-								
-							</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">重要通知</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>晨南戴科（时间轮转屋）官方网址：<a href="http://www.dbkaoshi.com" target="_blank">www.dbkaoshi.com</a></p>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">联系方式</h2>
-								<p>收藏本博客网址即可，及时关注发布的重要信息。</p>
-								<p>邮箱phillip_chen@foxmail.com，有问题可联系。</p>
 	
-							</article>
-							
-					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2022 <a href="http://www.dbkaoshi.com">晨南戴科dbkaoshi</a></p>
+						<p class="copyright">&copy; 晨科迪比</a></p>
 					</footer>
 
 			</div>
